--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,11 +4,46 @@
 
     <div class="navbar-header">
 
+      <button
+        type="button"
+        class="navbar-toggle collapsed"
+        data-toggle="collapse"
+        data-target="#navbar-collapse"
+        aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
       <a
         class="navbar-brand"
-        href="#">
-        Brand
+        href="{{ '/' | preprend:site.baseurl }}">
+        Steeplejack
       </a>
+
+    </div>
+
+    <div class="collapse navbar-collapse" id="navbar-collapse">
+
+      <ul class="nav navbar-nav">
+
+        {% for node in site.navbar %}
+          {% if page.url == node.url %}
+            <li class="active">
+              <a href="{{ node.url }}" class="active">
+                {{ node.title }}
+              </a></li>
+          {% else %}
+            <li>
+              <a href="{{ node.url }}">
+                {{ node.title }}
+              </a>
+            </li>
+          {% endif %}
+        {% endfor %}
+
+      </ul>
 
     </div>
 
