--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Bootstrap 101 Template</title>
+    <title>
+      {{ page.title }} {{ site.title}}
+    </title>
 
-    <link href="{{ 'assets/styles/main.css' | prepend:site.baseurl }}" rel="stylesheet">
+    <link href="{{ '/assets/styles/main.css' | prepend:site.baseurl }}" rel="stylesheet">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -17,10 +19,12 @@
 
   <body>
 
-    {{ content }}
+    <div class="layout layout--{{ page.layout }}">
+      {{ content }}
+    </div>
 
-    <script src="{{ 'assets/js/jquery-2.2.4.min.js' | prepend:site.baseurl }}"></script>
-    <script src="{{ 'assets/bootstrap/javascripts/bootstrap.min.js' | prepend:site.baseurl }}"></script>
+    <script src="{{ '/assets/js/jquery-2.2.4.min.js' | prepend:site.baseurl }}"></script>
+    <script src="{{ '/assets/bootstrap/javascripts/bootstrap.min.js' | prepend:site.baseurl }}"></script>
 
   </body>
 
