--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,5 +1,9 @@
+@import "config/colors";
+
 @import "third-party/bootstrap";
 @import "third-party/font-awesome";
 
 @import "layouts/common";
 @import "layouts/home";
+
+@import "components/jumbotron";
