--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,6 +6,7 @@
 
 @import "layouts/common";
 @import "layouts/home";
+@import "layouts/sidebar";
 
 @import "components/footer";
 @import "components/fork-me";
