--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <meta name="description" content="{{ site.description | strip_newlines }}" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="{{ site.url }}" />
+    <meta property="og:title" content="{{ page.title }} {{ site.title}}" />
+    <meta property="og:description" content="{{ site.description | strip_newlines }}" />
+    <meta property="og:image" content="https://browserspy.io/assets/img/brand/icon-in-circle.8144a450.png" />
+
+    <meta property="twitter:site" content="@riggerthegeek" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="{{ page.title }} {{ site.title }}" />
+    <meta property="twitter:description" content="{{ site.description | strip_newlines }}" />
+    <meta property="twitter:image:src" content="https://browserspy.io/assets/img/brand/icon-in-circle.8144a450.png" />
+
     <title>
       {{ page.title }} {{ site.title}}
     </title>
