--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,6 +8,7 @@
 @import "layouts/home";
 @import "layouts/sidebar";
 
+@import "components/code";
 @import "components/footer";
 @import "components/fork-me";
 @import "components/img";
