--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -48,7 +48,7 @@ layout: default
             {% if page.prev %}
               <a
                 role="button"
-                class="btn btn-danger"
+                class="btn btn-warning"
                 href="{{ page.prev.url | prepend: currentPage.url | prepend: site.baseurl }}">
                 <i class="fa fa-arrow-left"></i> {{ page.prev.name }}
               </a>
@@ -57,7 +57,7 @@ layout: default
             {% if page.next %}
               <a
                 role="button"
-                class="btn btn-success"
+                class="btn btn-info"
                 href="{{ page.next.url | prepend: currentPage.url | prepend: site.baseurl }}">
                   {{ page.next.name }}
                   <i class="fa fa-arrow-right"></i>
