--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,6 @@
 
     <link href="{{ '/assets/styles/main.css' | prepend:site.baseurl }}" rel="stylesheet">
 
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body class="site">
@@ -44,10 +40,7 @@
     <script src="{{ '/assets/js/jquery-2.2.4.min.js' | prepend:site.baseurl }}"></script>
     <script src="{{ '/assets/bootstrap/javascripts/bootstrap.min.js' | prepend:site.baseurl }}"></script>
     <script src="{{ '/assets/js/highlight-9.11.0.min.js' | prepend:site.baseurl }}"></script>
-
-    <script>
-      hljs.initHighlightingOnLoad();
-    </script>
+    <script src="{{ '/assets/js/app.js' | prepend:site.baseurl }}"></script>
 
   </body>
 
