--- a/_sass/layouts/_sidebar.scss
+++ b/_sass/layouts/_sidebar.scss
@@ -18,6 +18,14 @@
 
     }
 
+    .action-buttons {
+      @extend .text-center;
+
+      margin: {
+        top: $grid-gutter-width;
+      }
+    }
+
   }
 
 }
