--- a/_sass/base/_theme.scss
+++ b/_sass/base/_theme.scss
@@ -15,6 +15,10 @@
       &.navbar-nav {
 
         li {
+          padding: {
+            left: 10px;
+          }
+
           a {
             border: {
               radius: 50px;
