--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
       <span class="icon-bar"></span>
     </button>
 
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{{ '/' | prepend:site.baseurl }}">
       Steeplejack
     </a>
 
@@ -22,11 +22,13 @@
   <div class="collapse navbar-collapse" id="steeplejack-navbar-collapse">
 
     <ul class="nav navbar-nav navbar-right">
-      <li>
-        <a href="#">
-          Link
-        </a>
-      </li>
+      {% for item in site.data.navbar %}
+        <li{% if page.url == item.url %} class="active"{% endif %}>
+          <a href="{{ item.url | prepend:site.baseurl }}">
+            {{ item.title }}
+          </a>
+        </li>
+      {% endfor %}
     </ul>
 
   </div>
