--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,8 @@
 @import "base/variables";
 
 @import "third-party/bootstrap";
+@import "third-party/font-awesome";
+@import "third-party/hljs";
 
 @import "base/theme";
 
@@ -8,4 +10,7 @@
 @import "layouts/home";
 
 @import "components/buttons";
+@import "components/code";
+@import "components/footer";
+@import "components/social";
 
