Bit of jiggery-pokery

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
           <li>
             <div class="social_buttons">
 
-              <div class="inline-pad">
+              <div class="inline-pad" style="top: 6px;">
                 <a
                   href="https://twitter.com/share"
                   class="twitter-share-button"
@@ -48,7 +48,7 @@
                 data-share="false">
               </div>
 
-              <div class="inline-pad">
+              <div class="inline-pad" style="top: 6px;">
                 <a
                   class="github-button"
                   href="https://github.com/steeplejack-js/steeplejack"
