--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -71,7 +71,12 @@
 
           <li>
             <i class="fa fa-github fa-lg"></i>
-            Edit this page
+
+            <a
+              href="https://github.com/steeplejack-js/steeplejack-js.github.io/blob/master/{{ page.path }}"
+              target="_blank">
+              Edit this page
+            </a>
           </li>
 
           <li>
@@ -81,6 +86,8 @@
           </li>
 
           <li>
+            <i class="fa fa-github fa-lg"></i>
+
             <a href="https://github.com/steeplejack-js" target="_blank">
               GitHub
             </a>
