Got the getting started working in the sidebar

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,7 @@
 
     <div class="lead">
       Made with <i class="glyphicon glyphicon-heart"></i> by
-      <a href="http://simonemms.com" target="_blank">Simon Emms</a> and the
-      <a href="https://github.com/steeplejack-js/steeplejack/graphs/contributors" target="_blank">contributors</a>
+      <a href="http://simonemms.com" target="_blank">Simon Emms</a>
     </div>
 
     <div class="row">
