--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
     <div id="fb-root"></div>
 
-    <div class="layout layout--{{ page.layout }}">
+    <div class="site layout layout--{{ page.layout }}">
       {{ content }}
     </div>
 
