--- a/_sass/layouts/_common.scss
+++ b/_sass/layouts/_common.scss
@@ -1,3 +1,14 @@
+/* Sticky footer */
+.site {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+.site-content {
+  flex: 1;
+}
+
 .layout {
 
 }
