Couple of HTML fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,7 @@
           </li>
 
           <li>
-            &copy 2014-{{ site.time | date: '%Y' }}
+            &copy; 2014-{{ site.time | date: '%Y' }}
             <a href="{{ site.author_link }}" target="_blank">{{ site.author }}</a>
           </li>
 
@@ -58,7 +58,7 @@
               </div>
 
             </div>
-          </p>
+          </li>
 
         </ul>
 
