--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,5 +12,5 @@
 @import "components/buttons";
 @import "components/code";
 @import "components/footer";
+@import "components/nav";
 @import "components/social";
-
