--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -13,6 +13,7 @@ layout: default
 {% assign nav_pages = nav_pages | sort: 'order' %}
 {% assign prev_page = '' %}
 {% assign next_page = '' %}
+{% assign action_buttons = true %}
 
 <nav class="navbar navbar-default navbar-static-top">
   {% include navbar.html %}
@@ -33,6 +34,10 @@ layout: default
 
               {% if pg.url == page.url %}
                 {% assign activeClass = 'active' %}
+
+                {% if pg.action_buttons == false %}
+                  {% assign action_buttons = false %}
+                {% endif %}
               {% endif %}
 
               {% if activeClass == 'active' and forloop.first == false %}
@@ -71,32 +76,33 @@ layout: default
           {{ content }}
         </div>
 
-        <div class="action-buttons">
-          <!--{{ next_page | inspect }}-->
-          {% if prev_page or next_page %}
-            <div class="btn-group" role="group">
-              {% if prev_page != '' %}
-                <a
-                  role="button"
-                  class="btn btn-warning"
-                  href="{{ prev_page.url | prepend: site.baseurl }}">
-                  <i class="fa fa-arrow-left"></i>
-                  {{ prev_page.title }}
-                </a>
-              {% endif %}
+        {% if action_buttons == true %}
+          <div class="action-buttons">
+            {% if prev_page or next_page %}
+              <div class="btn-group" role="group">
+                {% if prev_page != '' %}
+                  <a
+                    role="button"
+                    class="btn btn-warning"
+                    href="{{ prev_page.url | prepend: site.baseurl }}">
+                    <i class="fa fa-arrow-left"></i>
+                    {{ prev_page.title }}
+                  </a>
+                {% endif %}
 
-              {% if next_page != '' %}
-                <a
-                  role="button"
-                  class="btn btn-info"
-                  href="{{ next_page.url | prepend: site.baseurl }}">
-                    {{ next_page.title }}
-                    <i class="fa fa-arrow-right"></i>
-                </a>
-              {% endif %}
-            </div>
-          {% endif %}
-        </div>
+                {% if next_page != '' %}
+                  <a
+                    role="button"
+                    class="btn btn-info"
+                    href="{{ next_page.url | prepend: site.baseurl }}">
+                      {{ next_page.title }}
+                      <i class="fa fa-arrow-right"></i>
+                  </a>
+                {% endif %}
+              </div>
+            {% endif %}
+          </div>
+        {% endif %}
 
       </div>
     </div>
