Updated sidebar theme

--- a/_sass/base/_theme.scss
+++ b/_sass/base/_theme.scss
@@ -5,6 +5,10 @@
   }
 }
 
+a {
+  outline: none !important;
+}
+
 .color-danger .navbar.navbar-default {
   @include navbar-color($brand-danger);
 }
