--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -72,6 +72,19 @@ layout: default
           {{ page.title }}
         </h1>
 
+        {% if page.repo %}
+          <dl class="dl-horizontal">
+            <dt>
+              Module:
+            </dt>
+            <dd>
+              <a href="https://github.com/steeplejack-js/{{ page.repo }}" target="_blank">
+                {{ page.repo }}
+              </a>
+            </dd>
+          </dl>
+        {% endif %}
+
         <div>
           {{ content }}
         </div>
