--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -8,6 +8,7 @@
 
 @import "layouts/common";
 @import "layouts/home";
+@import "layouts/sidebar";
 
 @import "components/buttons";
 @import "components/code";
