Added menu_hide option

--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -5,7 +5,7 @@ layout: default
 {% assign nav_pages = site.empty_array %}
 
 {% for pg in site.pages %}
-  {% if pg.docs and pg.url contains page.section %}
+  {% if pg.docs and pg.url contains page.section and pg.menu_hide != true %}
     {% assign nav_pages = nav_pages | push: pg %}
   {% endif %}
 {% endfor %}
