Added edit icon and made all fixed width

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,7 +69,7 @@
         <ul class="list-unstyled">
 
           <li>
-            <i class="fa fa-github fa-lg"></i>
+            <i class="fa fa-pencil fa-lg fa-fw"></i>
 
             <a
               href="https://github.com/steeplejack-js/steeplejack-js.github.io/blob/master/{{ page.path }}"
@@ -79,13 +79,14 @@
           </li>
 
           <li>
+            <i class="fa fa-comments fa-lg fa-fw"></i>
             <a href="https://gitter.im/steeplejack-js" target="_blank">
               Chat on Gitter
             </a>
           </li>
 
           <li>
-            <i class="fa fa-github fa-lg"></i>
+            <i class="fa fa-github fa-lg fa-fw"></i>
 
             <a href="https://github.com/steeplejack-js" target="_blank">
               GitHub
