--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -64,7 +64,21 @@
 
       </div>
 
-      <div class="col-md-4 col-md-offset-4">
+      <div class="col-md-4">
+
+        <ul class="list-unstyled main-menu">
+          {% for item in site.data.navbar %}
+            <li{% if page.url contains item.url %} class="active"{% endif %}>
+              <a href="{{ item.url | prepend:site.baseurl }}">
+                {{ item.title }}
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
+
+      </div>
+
+      <div class="col-md-4">
 
         <ul class="list-unstyled">
 
