--- a/_sass/components/_footer.scss
+++ b/_sass/components/_footer.scss
@@ -12,4 +12,16 @@
     color: $gray-lighter;
   }
 
+  .main-menu {
+
+    .active {
+
+      font: {
+        weight: 600;
+      }
+
+    }
+
+  }
+
 }
