Finally sorted out the affix on the sidebar

--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -23,8 +23,8 @@ layout: default
   <div class="container">
 
     <div class="row">
-      <div class="col-md-3 sidebar-wrapper">
-        <div id="sidebar">
+      <div class="col-md-3 hidden-xs hidden-sm sidebar-wrapper">
+        <div id="sidebar" data-spy="affix" data-offset-bottom="200">
           <ul class="nav nav-sidebar nav-stacked">
             {% for pg in nav_pages %}
 
@@ -67,7 +67,7 @@ layout: default
         </div>
       </div>
 
-      <div class="col-md-9">
+      <div class="col-md-9 col-md-offset-3">
         <h1>
           {{ page.title }}
         </h1>
