--- a/_sass/layouts/_sidebar.scss
+++ b/_sass/layouts/_sidebar.scss
@@ -3,6 +3,11 @@
     top: 140px;
   }
 
+  .sidebar-wrapper {
+    position: fixed;
+    top: 140px;
+  }
+
   h2:before {
     display: block;
     content: " ";
