Added explanation omodule name

--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -102,6 +102,17 @@ layout: default
               Injector Name:
             </strong>
 
+            <sup>
+              <a href="/concepts/dependency-injection"
+                type="button"
+                class="plain-link"
+                data-toggle="tooltip"
+                data-placement="top"
+                title="The name this module is registered with in the Dependency Injector">
+                <i class="fa fa-question-circle"></i>
+              </a>
+            </sup>
+
             <code>
               {{ page.ioc }}
             </code>
