Added offset top

--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -24,7 +24,7 @@ layout: default
 
     <div class="row">
       <div class="col-md-3 hidden-xs hidden-sm sidebar-wrapper">
-        <div id="sidebar" data-spy="affix" data-offset-bottom="200">
+        <div id="sidebar" data-spy="affix" data-offset-top="140" data-offset-bottom="200">
           <ul class="nav nav-sidebar nav-stacked">
             {% for pg in nav_pages %}
 
