Added badges to the homepage

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,6 +35,16 @@ layout: default
           </a>
         </p>
 
+        <div class="badges text-center">
+
+          {% for badge in site.badges %}
+            <a href="{{ badge.url }}" target="_blank">
+              <img src="{{ badge.badge }}" alt="{{ badge.name }}" />
+            </a>
+          {% endfor %}
+
+        </div>
+
         <div class="social_buttons">
 
           <div class="inline-pad">
